--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,8 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "index.js"
+            "dest": "index.js",
+            "timeout": 15000
         }
     ]
 }
